Bug 70106 - si_state.c:2776:13: error: conflicting types for 'si_bind_sampler_states'
Summary: si_state.c:2776:13: error: conflicting types for 'si_bind_sampler_states'
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-10-04 00:00 UTC by Vinson Lee
Modified: 2013-10-04 00:30 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
patch to try (1.57 KB, text/plain)
2013-10-04 00:10 UTC, Brian Paul
Details

Description Vinson Lee 2013-10-04 00:00:10 UTC
mesa: 757ec72b23bac52052c2fb98105b52699e265a24 (master)

  CC       si_state.lo
si_state.c:2776:13: error: conflicting types for 'si_bind_sampler_states'
 static void si_bind_sampler_states(struct pipe_context *ctx, unsigned shader,
             ^
si_state.c:2681:29: note: previous definition of 'si_bind_sampler_states' was here
 static struct si_pm4_state *si_bind_sampler_states(struct r600_context *rctx, unsigned count,
                             ^
Comment 1 Brian Paul 2013-10-04 00:10:03 UTC
Created attachment 87097 [details]
patch to try

Can you try the attached patch?  I can't build radeonsi ATM.  I guess nobody tested my branch.
Comment 2 Tom Stellard 2013-10-04 00:30:50 UTC
This patch works for me, and I've pushed it.  Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.